* 01-Mar-2008: version 0.1 (initial version)
	- Class(es): AbstractLanguage, FileLanguage, FileLanguageFactory, LanguageFactory, MlsException
	- Interface(s): ILanguage, ILanguageFactory